next previous button to display next and previous week number

--- a/www/templates/weekly.html
+++ b/www/templates/weekly.html
@@ -6,8 +6,8 @@
             <button class="button button-block">{{row}}</button>
           </div>
         </div>
-        <button class="button icon-left ion-chevron-left button-stable"></button>
-        <button class="button icon-left ion-chevron-right button-stable"></button>
+        <button class="button icon-left ion-chevron-left button-stable" ng-click='previous()'></button>
+        <button class="button icon-left ion-chevron-right button-stable" ng-click='next()'></button>
       </div>
   </ion-content>
 </ion-view>
